# pocket

./: .gitignore  README.md  requirements.txt
client/: CMakeLists.txt  README.md  build.sh
client/client/: CMakeLists.txt  crail_directory.cc  crail_directory.h  crail_file.cc  crail_file.h  crail_inputstream.cc  crail_node.cc  crail_node.h  crail_outputstream.cc  crail_store.cc  crail_store.h  directory_record.h
client/client/common/: block_cache.cc  byte_buffer.cc  byte_buffer.h  crail_constants.h  future.h  serializable.h
client/client/metadata/: block_info.h  datanode_info.cc  datanode_info.h  file_info.cc  file_info.h  filename.cc  filename.h
client/client/namenode/: create_request.cc  create_request.h  create_response.cc  create_response.h  getblock_request.cc  getblock_response.cc  getblock_response.h  ioctl_request.h  ioctl_response.cc  ioctl_response.h  lookup_request.cc  lookup_response.h  namenode_client.cc  namenode_client.h  namenode_request.cc  namenode_request.h  namenode_response.cc  namenode_response.h  remove_request.cc  remove_response.h  void_response.h
client/client/narpc/: rpc_checker.h  rpc_client.h  rpc_response.cc  rpc_response.h
client/client/reflex/: reflex_client.h  reflex_future.cc  reflex_future.h  reflex_header.cc  reflex_header.h
client/client/storage/: storage_cache.h  storage_client.h
client/client/storage/narpc/: narpc_read_request.cc  narpc_read_request.h  narpc_read_response.cc  narpc_read_response.h  narpc_storage_client.cc  narpc_storage_client.h  narpc_storage_request.cc  narpc_storage_request.h  narpc_storage_response.cc  narpc_storage_response.h  narpc_write_request.cc  narpc_write_response.cc  narpc_write_response.h
client/client/storage/reflex/: reflex_storage_client.cc
client/client/utils/: crail_hash.cc  crail_hash.h  micro_clock.cc  micro_clock.h
client/iobench/: CMakeLists.txt  iobench.cc  iobench.h
client/pocket/: CMakeLists.txt  pocket_dispatcher.cc  pocket_dispatcher.h  pypocket.cxx
client/proto/: CMakeLists.txt  metadata.proto
client/shell/: pshell.cc
clientlib/: fetch-deps.sh  pocket.py
controller/: README.md  controller.py  fetch-deps.sh  pocket_metadata_cmds.py
crailclient/: README.md  build.sh
crailclient/client/: crail_inputstream.h  crail_outputstream.h  directory_record.cc
crailclient/client/common/: block_cache.h
crailclient/pocket/: CMakeLists.txt
crailclient/proto/: rpcrequest.proto
crailclient/shell/: CMakeLists.txt
deploy/: README.md  README_old.md  add_ip_routes.sh  create-pocket-vpc.sh  create_datanode_job.py  create_pocket_vpc.sh  create_reflex_job.py  delete_pocket_vpc.sh  deploy_pocket_namenode.py  env.sh  measure_startup.py  modify-security-groups.py  patch_cluster.py  pocket-datanode-dram-job.yaml  pocket-datanode-hdd-job.yaml  pocket-datanode-nvme-job.yaml  pocket-datanode-ssd-job.yaml  pocket-namenode-deployment.yaml  pocketcluster.k8s.local.yaml  pocketcluster.template.yaml  prep_delete_cluster.py  setup_cluster.sh  update_datanode_yaml.sh
dockerfiles/crail-apache/: setup_hugepages.sh  start_datanode_dram.sh
microbenchmark/: README.md  aws-credentials.sh  create_lambda.sh  invoke_lambda.py  latency.py  libc.so.6  update_lambda.sh
microbenchmark/latency/: create_lambda.sh  invoke_lambda.py
monitor/: datanode_monitor.py
pocket-core/: README.md  pom.xml
pocket-core/assembly/: pom.xml
pocket-core/reflex-client/: README.md  pom.xml
pocket-core/storage-reflex/: pom.xml
src/: README.md  fetch-pocket-core.sh
(+80 files in other folders)
